2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewboxTest.cs: Added some tests.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewboxTest.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* HeaderedContentControlTest.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added ImageFailed.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added more tests.
	* Test.png: Added.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added more MeasureOverride tests.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Fixed MeasureOverrideMixedAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Fixed MeasureOverrideInfiniteAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added MeasureOverrideInfiniteAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added MeasureOverrideStretchUniformToFillDifferentWidthHeight.

2007-07-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added layout tests.

2007-07-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* SliderTest.cs: Switched to implemented TickPlacement.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* SliderTest.cs: Added some TickBar.ReservedSpace tests.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderTest.cs: Added drawing tests.

2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderTest.cs: Added drawing tests.

2007-07-15  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarTest.cs: Disabled a buggy test.

2007-07-14  George Giolfan  <georgegiolfan@yahoo.com>

	* Disabled ItemsControl-related tests.

2007-07-13  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemsControlTest.cs: Added some tests.
	* TemsPresenterTest.cs: Added.
